# FabOMatic-backend

./: .gitignore  AUTHENTIK.md  CLAUDE.md  MANIFEST.in  README.it.md  README.md  SCREENSHOT_GENERATOR_README.md  alembic.ini  pyproject.toml  requirements.txt  run.py  screenshot_generator.py
.claude/: settings.local.json
.github/workflows/: build.yml  deploy.yml  python-package.yml
alembic/: env.py
alembic/versions/: 26408bbc57d0_initial_db_scheme.py  a49b0d49e3db_added_unknown_cards_table.py
doc/: UI.docx  UI.it.md  UI.md
migrations/: env.py
mosquitto/conf.d/: aclfile
src/FabOMatic/: __main__.py
src/FabOMatic/conf/: FabConfig.py  settings.example.toml  settings.toml
src/FabOMatic/database/: models.py  repositories.py
src/FabOMatic/logic/: MsgMapper.py  WeeklySummary.py
src/FabOMatic/mqtt/: MQTTInterface.py  mqtt_types.py
src/FabOMatic/web/: authentication.py  authentik_oauth.py  routes_machines.py  routes_system.py  routes_users.py
src/rfid_backend_FABLAB_BG/: __init__.py  __main__.py  logger.py  main.py
src/rfid_backend_FABLAB_BG/alembic/: env.py
src/rfid_backend_FABLAB_BG/conf/: settings.toml
src/rfid_backend_FABLAB_BG/database/: DatabaseBackend.py  __init__.py  models.py  (+3 more)
tests/: __init__.py  common.py  test_auth.py  test_backend.py  test_config.py  test_data.py  test_database.py  test_logic.py  test_migrations.py  test_mqtt.py  test_settings.toml  test_sync_cache.py
tests/databases/: database-0.0.18.db  database-0.1.5.db  database-0.1.7.db  database-0.1.8.db  database-0.2.11.db  database-0.2.5.db  database-0.2.7.db  database-0.4.0.db
(+95 files in other folders)
