[build-system]
requires = ["hatchling", "SQLAlchemy", "toml", "paho-mqtt", "colorlog", "flask", "pyopenssl", "flask-login", "flask-mail", "alembic"]
build-backend = "hatchling.build"

[project]
name = "rfid_backend_FABLAB_BG"
version = "0.0.20"
authors = [
    { name="Lorenzo Rossi", email="mail@lorenzoros.si" },
    { name = "Pascal Brunot", email = "pbr-dev@gmail.com" },
    { name="Valerio Nappi", email="valerionappi995@gmail.com" }
]
description = "RFID backend for FabLab BG"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "SQLAlchemy",
    "toml",
    "paho-mqtt",
    "colorlog",
    "flask",
    "flask-login",
    "pyopenssl",
    "flask-mail",
    "itsdangerous"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
     ]
    

[project.urls]
"Homepage" = "https://github.com/fablab-bergamo/rfid-backend"
"Bug Tracker" = "https://github.com/fablab-bergamo/rfid-backend/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.black]
line-length = 119